--- a/index.html
+++ b/index.html
@@ -6,18 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitacora</title>
-
+    <link rel="stylesheet" href="estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Fjalla+One&family=Noto+Sans+KR&family=Raleway:wght@200;300;500;600;800&display=swap" rel="stylesheet">
-
-
 </head>
 
-<body>
+<body style="background-color:#F5F5F5;">
+
+    <div class="contenedor">
+        <div class="menu">
+
+            <nav class="menu-nav">
+                <ul>
+                    <li class="lista"><a class="opcion" href="#">BOOT-M1-SEM8-PROY2</a></li>
+                </ul>
+            </nav>
+        </div>
 
 </body>
 
