--- a/index.html
+++ b/index.html
@@ -26,6 +26,58 @@
                 </ul>
             </nav>
         </div>
+        <!-- -------------------------------Jumbotron ------------------------------>
+        <div class="col-1">
+            <div class="fi-1">
+                <h1>BITACORA
+                    <p>DE LINKS</p>
+                </h1>
+            </div>
+
+            <div class="fi-2">
+                <p class="parrafo-1">!Hola compañero BootCamper!
+                    <br>¿No te pasa que deseas guardar los links
+                    <br> que nuestros ponentes nos facilitan
+                    <br> a través del chat pero no lo haces?
+                    <br> Bueno, puedes usar este sitio web
+                    <br> para organizar y guardar todos esos links.
+                    <br> ¡Espero te sirva!
+                </p>
+            </div>
+            <div class="fi-3">
+                <div class="imagen1">
+                    <img src="Imagenes\Portada.gif" width="250px">
+                </div>
+            </div>
+        </div>
+
+        <section class="todo-outer">
+            <div class="container">
+                <div class="row justify-content-md-center">
+                    <div class="col-sm-12 col-md-8">
+
+
+                        <div class="form-row">
+                            <div class="form-contenedor">
+                                <input type="text" class="form-fecha" placeholder="Fecha" id="fecha" />
+                                <input type="text" class="form-control1" placeholder="Tema/Descripcion" id="tema" />
+                                <input type="text" class="form-control" placeholder="Link" id="link" />
+                                <button type="button" class="boton" id="agregarbtn"> Agregar</button>
+                                <button type="button" class="boton" id="guardarbtn" style="display: none;">Guardar </button><input type="hidden" id="guardarindex">
+                            </div>
+
+
+                            <div class="to-do-output">
+                                <table class="table table-striped mt-3 mb-0" id="tabla">
+
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 </body>
 
